# RemedyAI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  desktop-release.yml
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  hotkeys.ts  index.css  themes.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: app-update.toml  launch-at-login.toml  open-data-folder.toml  pick-folder.toml  restart-server.toml  window-chrome.toml
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/windows/: hooks.nsh
desktop/src/api/: attachments.ts  auth.ts  client.ts  messages.ts  partner.ts  providers.ts  sessions.ts  settings.ts  tauri.ts  updates.ts
desktop/src/components/: ApprovalBanner.tsx  CommandPalette.tsx  Composer.tsx  ImageLightbox.tsx  MessageFeed.tsx  Panels.tsx  ProcessTrace.tsx  RemedyLogo.tsx  SettingsPanel.tsx  SettingsSection.tsx  SetupWizard.tsx  Sidebar.tsx  SplashScreen.tsx  StatusBar.tsx  TabBar.tsx  TaskProgress.tsx  ThemeSwitcher.tsx  TitleBar.tsx  UpdateScreen.tsx  UserNamePrompt.tsx  icons.tsx
desktop/src/hooks/: useKeyboardShortcuts.ts  useMessages.ts  useNotifications.ts  useSessions.ts  useStickToBottom.ts  useTheme.ts  useUpdateChecker.ts
desktop/src/utils/: chatPrefs.ts  relativeTime.ts  sanitizeChat.ts  sessionMeta.ts  sessionTitle.ts  toolLabels.ts
docs/: DESKTOP.md  USAGE.md
examples/: basic_chat.py  demo_plugin.py
scripts/: build_desktop.py  check_prompt.py  dev_sidecar.py  generate_branding.py  latest.json  set_tauri_signing_secrets.py  setup_branding.py  sync_version.py  test_1024.py  test_flux.py
skills/memory-backup/: SKILL.md
skills/memory-backup/scripts/: backup.py
src/remedy/: __init__.py  models.py
src/remedy/bundled_skills/: __init__.py
src/remedy/bundled_skills/code-review/: SKILL.md
src/remedy/bundled_skills/comfyui/: SKILL.md
src/remedy/bundled_skills/comfyui/scripts/: comfy_client.py
src/remedy/bundled_skills/comfyui/scripts/workflows/: txt2img_flux2_klein.json
src/remedy/bundled_skills/commit-message/: SKILL.md
src/remedy/bundled_skills/debug-error/: SKILL.md
src/remedy/bundled_skills/decision-journal/: SKILL.md
src/remedy/bundled_skills/design-critique/: SKILL.md
src/remedy/bundled_skills/explain-code/: SKILL.md
src/remedy/bundled_skills/git-status/: SKILL.md
src/remedy/bundled_skills/memory-backup/: SKILL.md
src/remedy/bundled_skills/personal-briefing/: SKILL.md
src/remedy/bundled_skills/project-overview/: SKILL.md
src/remedy/bundled_skills/refactor-safe/: SKILL.md
src/remedy/bundled_skills/remember-me/: SKILL.md
src/remedy/bundled_skills/session-handoff/: SKILL.md
src/remedy/bundled_skills/web-research/: SKILL.md
src/remedy/bundled_skills/write-tests/: SKILL.md
src/remedy/bundled_skills/write-with-user/: SKILL.md
src/remedy/core/: agent.py  approvals.py  errors.py  learning_loop.py  local_discover.py  logging.py  metrics.py  providers.py  react_policy.py  react_stream.py  runtime.py  security.py  workspace.py
src/remedy/core/learning/: procedural.py  refiner.py  reflection.py
src/remedy/execution/: docker.py  policy.py  process.py  runtime.py  sandbox.py
src/remedy/gateway/: cli.py  router.py
src/remedy/gateway/channels/: adapters.py
src/remedy/interfaces/: api.py  api_models.py  api_support.py  attachments.py  cli.py  config.py  plugin.py  secret_store.py  uninstaller.py  updater.py  wizard.py  xai_auth.py
src/remedy/interfaces/routes/: __init__.py  auth.py  catalog.py  chat.py  memory.py  misc.py  partner.py  sessions.py  settings.py  status.py  workspace.py
src/remedy/memory/: consolidator.py  handoff.py  knowledge_pack.py  profile.py  repair.py  store.py
src/remedy/memory/harness/: __init__.py  brief.py  compressor.py  pruner.py
src/remedy/migrate/: from_hermes.py  from_openclaw.py
src/remedy/skills/: executor.py  exporter.py  loader.py  registry.py  tool_registry.py  validator.py
src/remedy/skills/adapters/: hermes_adapter.py  hermes_deep.py  openclaw_deep.py  openclaw_mcp_adapter.py
src/remedy/tools/: comfyui.py  mcp_client.py
tests/: test_access_scope.py  test_adapters.py  test_agent_react.py  test_attachments.py  test_bundled_skills.py  test_comfyui_discover.py  test_error_boundary.py  test_hidden_process.py  test_learning_loop.py  test_local_discover.py  test_mcp_client.py  test_memory.py  test_memory_batch.py  test_memory_harness.py  test_metrics_api.py  test_models.py  test_partner_phase.py  test_phase1.py  test_phase2.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_plan_providers.py  test_plugin.py  test_profile.py  test_providers.py  test_react_policy.py  test_react_stream.py  test_reasoning_content.py  test_registry.py  test_review_fixes.py  test_secret_store.py  test_settings_version.py  test_setup_gate.py  test_skill_loader.py  test_tool_call_pairing.py  test_tool_policy.py  test_workspace.py  test_xai_auth.py
