[project]
name = "remedy"
version = "0.1.0"
description = "A self-improving, multi-channel AI agent framework with memory, learning, and extensibility"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ahmi", email = "ahmitdarrow@gmail.com" }
]
keywords = ["ai", "agent", "framework", "skill", "memory", "learning", "llm", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.2",
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "uvicorn>=0.51.0",
]

[project.urls]
Homepage = "https://github.com/AhmiDarrow/RemedyAI"
Repository = "https://github.com/AhmiDarrow/RemedyAI"

[project.scripts]
remedy = "remedy.interfaces.cli:main"

[build-system]
requires = ["uv_build>=0.11.31,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--tb=short", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
lint.ignore = ["SIM114", "C419"]
fix = true
unsafe-fixes = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806", "E501"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.11.0",
]
