[project]
# Distribution name on PyPI. Do NOT use "remedy" — that name is occupied by an
# unrelated package (remedy 0.0.6) that pulls ancient Jinja2/begins.
# Import package and CLI entry point remain `remedy`.
name = "remedy-ai"
version = "0.10.3"
description = "A self-improving, multi-channel AI agent framework with memory, learning, and extensibility"
readme = "README.md"
license = { text = "LicenseRef-Proprietary" }
authors = [
    { name = "Ahmi", email = "ahmitdarrow@gmail.com" }
]
keywords = ["ai", "agent", "framework", "skill", "memory", "learning", "llm", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.2",
    "fastapi>=0.139.2",
    "packaging>=24.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "uvicorn>=0.51.0",
]

[project.urls]
Homepage = "https://github.com/AhmiDarrow/RemedyAI"
Repository = "https://github.com/AhmiDarrow/RemedyAI"

[project.scripts]
remedy = "remedy.interfaces.cli:main"

[build-system]
requires = ["uv_build>=0.11.31,<0.12.0"]
build-backend = "uv_build"

# Dist name is remedy-ai; import package stays `remedy` under src/remedy/
[tool.uv.build-backend]
module-name = "remedy"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--tb=short", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
lint.ignore = ["SIM114", "C419"]
fix = true
unsafe-fixes = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806", "E501"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.11.0",
]
